--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=58e78f6ea5ca90a501a42f9f312543ab
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/db_exam"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
