--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
             hotel_image_directory: '%kernel.project_dir%/public/uploads/HotelImages'
+            client_image_directory: '%kernel.project_dir%/public/uploads/ClientImages'
 services:
     # default configuration for services in *this* file
     _defaults:
